--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Description: Simplify the blogging process, such as: scraping, formatting,
 License: GPL-2 | file LICENSE
 Encoding: UTF-8
 LazyData: true
+Depends: R (>= 2.10)
 Imports: data.table,
   dplyr,
   ggplot2,
