Export from build

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,3 +14,5 @@ export(blg_opts_knitr_hooks)
 export(blg_source_value)
 export(blg_theme_default)
 export(blg_tibblefy)
+export(file_path)
+export(plot_lines)
